apps/security/tenant-guardrails/manifests/deny-tenant-cluster-admin-binding-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyTenantClusterAdminBinding
metadata:
  name: tenant-deny-cluster-admin-binding
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["RoleBinding"]
    namespaceSelector:
      matchExpressions:
        - key: teams.example.com/team-id
          operator: Exists
